[package]
edition = "2018"
name = "bit-index"
version = "0.1.0"

authors = ["Thomas Villa <thomvil87@gmail.com>"]
description = "A little-endian zero-indexed bitstring representation"
documentation = "https://docs.rs/bit-index/"
homepage = "https://github.com/thomvil/bit-index-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thomvil/bit-index-rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
